[metadata]
version = 1.0.0a2
description = Visualize spaCy with streamlit
url = https://github.com/explosion/spacy-streamlit
author = Explosion
author_email = contact@explosion.ai
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = true
python_requires = >=3.6
install_requires =
    streamlit>=0.62.0
    spacy-nightly>=3.0.0a16
    pandas

[flake8]
ignore = E203, E266, E501, E731, W503, E741
max-line-length = 80
select = B,C,E,F,W,T4,B9
exclude =
    spacy_streamlit/__init__.py
